- Fix bug where very long words in content will overflow off the div (e.g., email message content in _timeline_block.html.erb).

--- a/app/assets/stylesheets/base/custom.scss
+++ b/app/assets/stylesheets/base/custom.scss
@@ -246,6 +246,9 @@ hr.message-divider {
 .social-comment textarea {
   font-size: 12px;
 }
+.chat-discussion {
+  word-wrap: break-word;
+}
 .chat-discussion .action-links {
   font-size: 12px;
   padding: 15px 0;
